kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.31.2 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: backend
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: backend
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.31.2 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/small-web-app-app-network: "true"
        io.kompose.service: backend
    spec:
      containers:
        - env:
            - name: PORT
              value: "5000"
          image: jaaan894/small_web_app-backend
          name: backend
          ports:
            - containerPort: 5000
              hostPort: 5000
              protocol: TCP
          resources: {}
          volumeMounts:
            - mountPath: /app/database
              name: backend-db
      restartPolicy: Always
      volumes:
        - name: backend-db
          persistentVolumeClaim:
            claimName: backend-db
status: {}
